# youtube-transcription

./: .gitignore  .mcp.json  README.md  build_installer.py  installer.iss  pyproject.toml  yt_transcribe.spec
scripts/: register-mcp.ps1  unregister-mcp.ps1
src/yt_transcribe/: assemblyai_engine.py  cli.py  config.py  download.py  exceptions.py  jobs.py  mcp_server.py  models.py  search.py  storage.py  transcribe.py  whisper_engine.py
tests/fixtures/: sample_config.yaml
tests/integration/: test_cli_commands.py  test_mcp_tools.py
tests/unit/: test_assemblyai_engine.py  test_config.py  test_download.py  test_exceptions.py  test_jobs.py  test_list_transcripts.py  test_models.py  test_search.py  test_storage.py  test_transcribe.py  test_whisper_engine.py
ui/: main.py  state.py  theme.py
ui/components/: job_row.py  settings_drawer.py  title_bar.py  url_input.py
ui/pages/: main_page.py
